# ghcr-cleaner

./: .gitignore  Cargo.toml
.github/: dependabot.yaml
.github/workflows/: ci.yaml
.run/: Build [release].run.xml
src/: github.rs  main.rs
