[package]
name = "ghcr-cleaner"
version = "0.1.0"
authors = ["Marcel <34819524+MarcelCoding@users.noreply.github.com>"]
edition = "2018"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true  # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.17", features = ["full"] }
simple_logger = "1.16.0"
futures = "0.3"
log = "0.4"
rpassword = "7.0"
